--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,17 +1,17 @@
 body {
-    background-color: lightcyan;
+    background-color: #898c7b;
     text-align: center;
-    color: purple;
+    color: #4A4A48;
     font-family: monospace;
 }
 
 a {
-    color: mediumblue;
+    color: #A4C2A5;
     text-decoration: dashed;
 }
 
 a:hover {
-    color: darkslategrey;
+    color: #5D5179;
     text-decoration: line-through;
 }
 
@@ -22,6 +22,16 @@ main {
 }
 
 h2 {
+    text-align: center;
+    
+}
+
+h3{
+    font-style: italic;
+    text-align: center;
+}
+
+p{
     text-align: center;
 }
 
@@ -34,3 +44,8 @@ figure{
     font-style: oblique;
 }
 
+.validator-icon {
+    border: 0;
+    width: 88px;
+    height: 31px;
+  }
