--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -5,6 +5,12 @@
             <a href="introduction.html">Introduction</a>
             |
             <a href="contract.html">Contact</a>
-            |
+            <br>
+            <p>----------------------------------------------------------</p>
             <a href="Jolly-Proud-Bear-Brewery/index.html">Jolly Proud Bear Brewery</a>
+            |
+            <a href="website_evaluation.html">Web Evaluation</a>
+            |
+            <a href="stuff/crappy%20WEBSITE.htm">Crappy Website</a>
         </nav>
+    
