--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,6 +11,6 @@
             |
             <a href="website_evaluation.html">Web Evaluation</a>
             |
-            <a href="stuff/crappy%20WEBSITE.htm">Crappy Website</a>
+            <a href="stuff/crappy%20WEBSITE.htm">Crappy Website&</a>
         </nav>
     
