--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -21,6 +21,10 @@ main {
     margin-right: 30%;
 }
 
+h1 {
+    text-align: center;
+    
+}
 h2 {
     text-align: center;
     
@@ -33,6 +37,7 @@ h3{
 
 p{
     text-align: center;
+    font-style: italic;
 }
 
 img {
