--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,5 +12,7 @@
             <a href="website_evaluation.html">Web Evaluation</a>
             |
             <a href="stuff/crappy%20WEBSITE.htm">Crappy Website&</a>
+            |
+            <a href="hobby/hobby.html">Hobby</a>
         </nav>
     
