--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,6 +13,6 @@
             |
             <a href="stuff/crappy%20WEBSITE.htm">Crappy Website&</a>
             |
-            <a href="hobby/hobby.html">Hobby</a>
+            <a href="../itis3135/hobby/">Hobby</a>
         </nav>
     
