--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -5,6 +5,8 @@
             <a href="introduction.html">Introduction</a>
             |
             <a href="contract.html">Contact</a>
+            |
+            <a href="tables.html">Tables</a>
             <br>
             <p>----------------------------------------------------------</p>
             <a href="Jolly-Proud-Bear-Brewery/index.html">Jolly Proud Bear Brewery</a>
