--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -73,8 +73,67 @@ section p {
     text-align: justify;
 }
 
+.fancy-table {
+    width: 80%;
+    margin: 0 auto;
+    border-collapse: collapse;
+    font-family: sans-serif;
+  }
+  
+  .fancy-table th,
+  .fancy-table td {
+    border: 1px solid #333;
+    padding: 10px;
+    text-align: left;
+  }
+  
+  .fancy-table thead tr {
+    background-color: #000;
+    color: #fff;
+  }
+  
+  .fancy-table tfoot tr {
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .fancy-table tbody tr:nth-of-type(odd) {
+    background-color: #b0adad;
+  }
+  
+  .fancy-table tbody tr:nth-of-type(even) {
+    background-color: #e0e0e0;
+  }
+  
+.fancy-table td[rowspan] {
+    background-color: #d0d0d0 ;
+    font-style: italic;
+  }
+  
+  .centered-list {
+    width: fit-content;
+    margin: 0 auto;
+    padding-left: 1.5rem; 
+    font-family: sans-serif;
+  }
 
-
+  .centered-table {
+    border: 2px solid black;         
+    border-collapse: collapse;       
+    margin: 2rem auto;               
+    font-family: sans-serif;
+  }
+  
+  .centered-table th,
+  .centered-table td {
+    border: 1px solid black;         
+    padding: 8px;
+    text-align: left;
+  }
+  
+  
+  
 @media screen and (max-width: 600px) {
     img {
         max-width: 100%;
