--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,6 +7,8 @@
             <a href="contract.html">Contact</a>
             |
             <a href="tables.html">Tables</a>
+            |
+            <a href="byo_intro.html">BYO Intro</a>
             <br>
             <p>----------------------------------------------------------</p>
             <a href="Jolly-Proud-Bear-Brewery/index.html">Jolly Proud Bear Brewery</a>
