--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,6 +11,8 @@
             <a href="byo_intro.html">BYO Intro</a>
             |
             <a href="project_overview.html">Project Overview</a>
+            |
+            <a href="forms.html">Whimsical Company</a>
             <br>
             <p>----------------------------------------------------------</p>
             <a href="Jolly-Proud-Bear-Brewery/index.html">Jolly Proud Bear Brewery</a>
