--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -22,5 +22,7 @@
             <a href="stuff/crappy%20WEBSITE.htm">Crappy Website&</a>
             |
             <a href="../itis3135/hobby/">Hobby</a>
+            |
+            <a href="../itis3135/slideshow.html">Slideshow</a>
         </nav>
     
