--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -24,5 +24,7 @@
             <a href="../itis3135/hobby/">Hobby</a>
             |
             <a href="../itis3135/slideshow.html">Slideshow</a>
+            |
+            <a href="../itis3135/drawing.html">Drawing</a>
         </nav>
     
