--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -26,5 +26,9 @@
             <a href="../itis3135/slideshow.html">Slideshow</a>
             |
             <a href="../itis3135/drawing.html">Drawing</a>
+            |
+            <a href="../itis3135/review1.html">Review1</a>
+            |
+            <a href="../itis3135/review2.html">Review2</a>
         </nav>
     
