--- a/clientProject/components/footer.html
+++ b/clientProject/components/footer.html
@@ -1,7 +1,39 @@
 <nav class="nav-links">
-    <h1><a href="about.html">About us</a></h1> 
-    <span class="separator">|</span>
-    <h1><a href="contact.html">Contact</a></h1>
-    <span class="separator">|</span>
-    <h1><a href="location.html">Location</a></h1>
-  </nav>
+  <!-- Link to About Us page -->
+  <h2><a href="about.html">About&nbsp;Us</a></h2>
+  <span class="separator">|</span>
+
+  <!-- Link to Contact page -->
+  <h2><a href="contact.html">Contact</a></h2>
+  <span class="separator">|</span>
+
+  <!-- Link to Location / Directions page -->
+  <h2><a href="location.html">Location</a></h2>
+</nav>
+
+
+<div class="site-credit">
+  &copy; 2025 <strong>Jolly Bearly Studio</strong>. All rights reserved.
+</div>
+
+<div class="validator-links">
+  <a id="validation-link-html"
+     href="https://validator.w3.org/check?uri=referer" target="_blank">
+    <img src="https://www.w3.org/Icons/valid-html401"
+         alt="Validate HTML">
+  </a>
+
+  <a id="validation-link-css"
+     href="https://jigsaw.w3.org/css-validator/check/referer"
+     target="_blank">
+    <img src="https://jigsaw.w3.org/css-validator/images/vcss"
+         alt="Validate CSS">
+  </a>
+
+  <a id="validation-link-wcag"
+     href="https://wave.webaim.org/report#/" target="_blank">
+    <img src="https://www.w3.org/WAI/wcag2AA-blue"
+         alt="Check Accessibility (WAVE)">
+  </a>
+</div>
+
