--- a/clientProject/components/header.html
+++ b/clientProject/components/header.html
@@ -1,11 +1,16 @@
-<h1><a href="index.html">Cut&Play</a></h1>
+<!-- Logo / brand name – clicking returns to index.html -->
+<h1>
+  <a href="index.html">Cut&nbsp;&amp;&nbsp;Play</a>
+</h1>
 
+<!-- Main navigation: centre-aligned flex list styled in default.css -->
 <nav id="main-nav" class="navbar">
-    <ul class="nav-links">
-      <li><a href="schedule.html">Schedule an appointment</a></li>
-      <li><a href="cancel-reschedule.html">Reschedule/Cancel an appointment</a></li>
-      <li><a href="msghairdresser.html">Message a hairdresser</a></li>
-      <li><a href="services.html">Services/Tips for parents</a></li>
-      <li><a href="gallery.html">Gallery/Hairdresser</a></li>
-    </ul>
-  </nav>
+  <ul class="nav-links">
+    <!-- Each <li> holds one call-to-action page -->
+    <li><a href="schedule.html">Schedule an appointment</a></li>
+    <li><a href="cancel-reschedule.html">Reschedule / Cancel an appointment</a></li>
+    <li><a href="msghairdresser.html">Message a hairdresser</a></li>
+    <li><a href="services.html">Services / Tips for parents</a></li>
+    <li><a href="gallery.html">Gallery / Hairdressers</a></li>
+  </ul>
+</nav>
