--- a/clientProject/components/footer.html
+++ b/clientProject/components/footer.html
@@ -16,7 +16,7 @@
   &copy; 2025 <strong>Jolly Bearly Studio</strong>. All rights reserved.
 </div>
 
-<div class="validator-links">
+<div class="validators">
   <a id="validation-link-html"
      href="https://validator.w3.org/check?uri=referer" target="_blank">
     <img src="https://www.w3.org/Icons/valid-html401"
