--- a/clientProject/components/footer.html
+++ b/clientProject/components/footer.html
@@ -32,7 +32,7 @@
 
   <a id="validation-link-wcag"
      href="https://wave.webaim.org/report#/" target="_blank">
-    <img src="https://www.w3.org/WAI/wcag2AA-blue"
+    <img src="images/wcag2AA-blue_resized.png"
          alt="Check Accessibility (WAVE)">
   </a>
 </div>
