--- a/clientProject/styles/default.css
+++ b/clientProject/styles/default.css
@@ -483,7 +483,7 @@ body {
 }
 
 .validators img { 
-  height: 30px; border: 0; vertical-align: middle; 
+  height: auto; border: 0; vertical-align: middle; 
 }
 
 .validators a:hover img { 
