--- a/clientProject/components/footer.html
+++ b/clientProject/components/footer.html
@@ -13,7 +13,7 @@
 
 
 <div class="site-credit">
-  &copy; 2025 <strong>Jolly Bearly Studio</strong>. All rights reserved.
+  &copy; 2025 <strong><a href="../itis3135/JollyBearly.org/index.html">Jolly Bearly Studio</a></strong>. All rights reserved.
 </div>
 
 <div class="validators">
